Make view static in view-only mode

--- a/src/assets/note.css
+++ b/src/assets/note.css
@@ -70,6 +70,10 @@
   background-color: #ff9d9d;
 }
 
+.content.readonly .note .dot {
+  opacity: 0;
+}
+
 .preview-connection {
   display: none;
   pointer-events: none;
