--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -39,3 +39,35 @@ a {
   color: #60a5fa;
   text-decoration: underline;
 }
+
+h3 {
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.app-content {
+  padding: 0.75rem 1rem;
+  flex: 1 1 0%;
+}
+
+@media (min-width: 640px) {
+  .app-content {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .app-content {
+    padding-left: 6rem;
+    padding-right: 6rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .app-content {
+    padding-left: 12rem;
+    padding-right: 12rem;
+  }
+}
