--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,6 +14,21 @@
   /* overflow: hidden; */
 }
 
+.theme-dark {
+  --white: black;
+  --black: white;
+}
+
+.theme-light {
+  --white: white;
+  --black: black;
+}
+
+body {
+  background-color: var(--white);
+  color: var(--black);
+}
+
 line {
   stroke-linecap: round;
   pointer-events: stroke;
