--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -69,27 +69,14 @@ h3 {
 }
 
 .app-content {
-  padding: 0.75rem 1rem;
   flex: 1 1 0%;
+  width: 100%;
+  margin: auto;
+  padding: 0.25rem 1rem;
 }
 
-@media (min-width: 640px) {
+@media (min-width: 40rem) {
   .app-content {
-    padding-left: 2rem;
-    padding-right: 2rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .app-content {
-    padding-left: 6rem;
-    padding-right: 6rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .app-content {
-    padding-left: 12rem;
-    padding-right: 12rem;
+    width: 40rem;
   }
 }
