Add settings dialog
Now profile and theme settings moved into this dialog. Additionaly the shortcut can be customized here.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,12 +17,14 @@
   --white: #222325;
   --black: white;
   --hover-color: #6c80a9;
+  --active-color: #4684d3;
 }
 
 .theme-light {
   --white: white;
   --black: black;
   --hover-color: #bfdbfe;
+  --active-color: #4684d3;
 }
 
 body {
