Fix: Incorrect board access
When a board is publicly viewable and have 1 user with explicit edit
permission, the board become publicly editable.

--- a/src/assets/note.css
+++ b/src/assets/note.css
@@ -93,6 +93,10 @@
   opacity: 0;
 }
 
+.content.readonly .note .resize {
+  cursor: initial;
+}
+
 .preview-connection {
   display: none;
   pointer-events: none;
